--- a/dev/partials/menu.html
+++ b/dev/partials/menu.html
@@ -13,19 +13,19 @@
 			<ul class="nav navbar-nav" ng-if="userCtx">
 				<li ng-class="{active: $state.includes('main.projects') || $state.includes('main.project')}">
 					<a ui-sref="main.projects">
-						<i class="fa fa-building"></i>
+						<i class="fa fa-fw fa-building"></i>
 						<span translate>shared.projects</span>
 					</a>
 				</li>
 				<li ng-class="{active: $state.includes('main.indicators') || $state.includes('main.indicator')}">
 					<a ui-sref="main.indicators.list">
-						<i class="fa fa-book"></i>
+						<i class="fa fa-fw fa-book"></i>
 						<span translate>shared.indicators_catalog</span>
 					</a>
 				</li>
 				<li ng-class="{active: $state.includes('main.help')}">
 					<a ui-sref="main.help.monitoring">
-						<i class="fa fa-question"></i>
+						<i class="fa fa-fw fa-question"></i>
 						<span translate>shared.help</span>
 					</a>
 				</li>
@@ -33,7 +33,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-						<i class="fa fa-language"></i>
+						<i class="fa fa-fw fa-language"></i>
 						{{'menu.language' | translate}}
 						<span class="caret"></span>
 					</a>
@@ -47,7 +47,7 @@
 
 				<li class="dropdown" ng-if="userCtx">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-						<i class="fa fa-user"></i>
+						<i class="fa fa-fw fa-user"></i>
 						{{userCtx.name}}
 						<span class="caret"></span>
 					</a>
