Implement core indicators Fix project/master bug Fix reset button on logical frame page

--- a/dev/partials/indicators/list.html
+++ b/dev/partials/indicators/list.html
@@ -12,7 +12,7 @@
 
 <br/><br/>
 
-<indicator-select buttons="edit,reporting"></indicator-select>
+<indicator-select buttons="edit,reporting" standard="standard" order-field="orderField" user-ctx="userCtx" />
 
 <a class="btn btn-default" ui-sref="main.indicator.edit({indicatorId: 'new'})" acl-has-role="indicator">
 	<i class="fa fa-plus"></i>
