--- a/dev/partials/indicators/accordeon.html
+++ b/dev/partials/indicators/accordeon.html
@@ -3,20 +3,20 @@
 	<div class="indicator-header" ng-click="toggleTheme(theme)">
 		<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !theme.open, 'fa-minus-circle': theme.open}"></i>
 		{{(theme.name || 'indicator.no_theme')|translate}}
-		<span class="badge pull-right">{{theme.numIndicators}}</span>
+		<span class="badge pull-right" style="margin-right: 10px;">{{theme.numIndicators}}</span>
 	</div>
 
 	<div class="indicator-level-2" ng-repeat="type in theme.types" ng-if="theme.open">
 		<div class="indicator-header" ng-click="toggleType(theme, type)">
 			<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !type.open, 'fa-minus-circle': type.open}"></i>
 			{{(type.name || 'indicator.no_type')|translate}}
-			<span class="badge pull-right">{{type.numIndicators}}</span>
+			<span class="badge pull-right" style="margin-right: 10px;">{{type.numIndicators}}</span>
 		</div>
 
 		<div class="indicator-level-3" ng-repeat="indicator in type.indicators | orderBy:orderField" ng-if="type.open">
 			<i class="fa fa-circle-o" ng-style="{color: indicator.standard ? '#72bb53' : '#d68227'}"></i>
 
-			<span>{{indicator.name}}</span>
+			<span style="overflow: hidden;">{{indicator.name}}</span>
 
 			<span class="pull-right" style="display: inline-block; width: 180px; position: relative; top: -3px">
 				<a class="btn btn-xs btn-default"
