--- a/dev/partials/indicators/edit.html
+++ b/dev/partials/indicators/edit.html
@@ -8,9 +8,11 @@
 		<legend translate>indicator.definition</legend>
 
 		<div class="form-group">
-			<label for="input-standard" class="col-sm-2 control-label" translate="indicator.standard"></label>
+			<label for="input-standard" class="col-sm-2 control-label" translate="indicator.core"></label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.standard">
-				<input id="input-standard" type="checkbox" ng-model="indicator.standard" name="standard" />
+				<p class="form-control-static">
+					<input id="input-standard" type="checkbox" ng-model="indicator.standard" name="standard" />
+				</p>
 			</div>
 		</div>
 
