--- a/dev/partials/indicators/list.html
+++ b/dev/partials/indicators/list.html
@@ -12,9 +12,11 @@
 
 <br/><br/>
 
-<indicator-select buttons="edit,reporting" standard="standard" order-field="orderField" user-ctx="userCtx" />
+<indicator-select buttons="edit,reporting" standard="standard" order-field="orderField" user-ctx="userCtx"></indicator-select>
 
 <a class="btn btn-default" ui-sref="main.indicator.edit({indicatorId: 'new'})" acl-has-role="indicator">
 	<i class="fa fa-plus"></i>
 	<span translate="indicator.create_new"></span>
 </a>
+
+
