--- a/dev/partials/indicators/selector-popup.html
+++ b/dev/partials/indicators/selector-popup.html
@@ -4,7 +4,7 @@
 	<label for="standard-input" style="text-weight: normal" translate="indicator.only_core"></label>
 	<input id="standard-input" type="checkbox" ng-model="standard" />
 
-	<indicator-select buttons="choose" standard="standard" order-field="'name'" user-ctx="userCtx" />
+	<indicator-select buttons="choose" standard="standard" order-field="'name'" user-ctx="userCtx"></indicator-select>
 </div>
 
 <div class="modal-footer">
