--- a/dev/partials/projects/logical-frame-indicator.html
+++ b/dev/partials/projects/logical-frame-indicator.html
@@ -150,7 +150,7 @@
 
 	<button ng-click="save()" ng-disabled="planningForm.$invalid || isUnchanged()" class="btn btn-primary" ng-if="!isNew" acl-has-project-role="owner">
 		<i class="fa fa-floppy-o"></i>
-		<span translate="shared.save"></span>
+		<span translate="shared.edit"></span>
 	</button>
 
 	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew" acl-has-project-role="owner">
