--- a/dev/partials/projects/list.html
+++ b/dev/partials/projects/list.html
@@ -4,7 +4,7 @@
 <table class="table table-bordered table-stripped table-condensed">
 	<thead>
 		<tr>
-			<th style="width: 30px"></th>
+			<th style="width: 55px"></th>
 			<th><a ng-click="pred='name';rev=!rev">{{'shared.name'|translate}}</a></th>
 			<th><a ng-click="pred='begin';rev=!rev">{{'shared.begin'|translate}}</a></th>
 			<th><a ng-click="pred='end';rev=!rev">{{'shared.end'|translate}}</a></th>
@@ -12,7 +12,10 @@
 	</thead>
 	<tbody>
 		<tr ng-repeat="project in projects | filter:isDisplayed | orderBy:pred:rev">
-			<td><i class="fa" ng-class="{'fa-star': offline[project._id], 'fa-star-o': !offline[project._id]}"></i></td>
+			<td style="text-align: center">
+				<i class="fa fa-file-powerpoint-o" tooltip="Vous pouvez éditer ce projet" tooltip-placement="right" acl-has-project-role="owner" acl-project="project"></i>
+				<i class="fa fa-file-text-o" tooltip="Vous pouvez saisir sur ce projet" tooltip-placement="right" acl-has-project-role="input" acl-project="project"></i>
+			</td>
 			<td><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></td>
 			<td>{{project.begin}}</td>
 			<td>{{project.end}}</td>
