--- a/dev/partials/projects/logical-frame.html
+++ b/dev/partials/projects/logical-frame.html
@@ -62,11 +62,12 @@
 	<fieldset>
 		<legend translate="project.goal"></legend>
 		<div class="form-group" show-errors>
-			<label for="input-name" class="col-sm-2 control-label" translate="project.intervention_logic"></label>
+			<label for="logframe-goal-input" class="col-sm-2 control-label" translate="project.intervention_logic"></label>
 
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.logicalFrame.goal">
 				<textarea class="form-control"
 						  name="goalDesc"
+						  id="logframe-goal-input"
 						  required
 						  placeholder="{{'project.intervention_logic_goal_ph'|translate}}"
 						  ng-model="project.logicalFrame.goal"></textarea>
@@ -76,16 +77,17 @@
 		</div>
 
 		<div class="form-group">
-			<label for="input-name" class="col-sm-2 control-label" translate="shared.indicators"></label>
+			<label class="col-sm-2 control-label" translate="shared.indicators"></label>
 			<div class="col-sm-10">
 				<ul class="form-control-static">
 					<li ng-repeat="indicatorId in project.logicalFrame.indicators">
 						{{indicatorsById[indicatorId].name}}
-						<span acl-has-project-role="owner">(<a ng-click="editIndicator(indicatorId, 'root')" translate="shared.edit"></a>)</span>
-						<span acl-lacks-project-role="owner">(<a ng-click="editIndicator(indicatorId, 'root')" translate="shared.display"></a>)</span>
+						<span acl-has-project-role="owner">(<a ng-click="editIndicator(indicatorId, project.logicalFrame.indicators)" translate="shared.edit"></a> |
+							<a ng-click="detachIndicator(indicatorId, project.logicalFrame.indicators)" translate="shared.detach"></a>)</span>
+						<span acl-lacks-project-role="owner">(<a ng-click="editIndicator(indicatorId, project.logicalFrame.indicators)" translate="shared.display"></a>)</span>
 					</li>
 					<li acl-has-project-role="owner">
-						<a ng-click="editIndicator('new', 'root')" translate="project.add_indicator"></a>
+						<a ng-click="editIndicator('new', project.logicalFrame.indicators)" translate="project.add_indicator"></a>
 					</li>
 				</ul>
 			</div>
@@ -112,11 +114,12 @@
 			<div class="panel-body" ng-show="tabOpen">
 				<ng-form name="purposeForm">
 					<div class="form-group" show-errors>
-						<label for="input-name" class="col-sm-2 control-label" translate="project.intervention_logic"></label>
+						<label for="purpose-desc-{{purposeId}}-input" class="col-sm-2 control-label" translate="project.intervention_logic"></label>
 						<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="purpose.description">
 							<input type="text"
 								   class="form-control"
 								   name="description"
+								   id="purpose-desc-{{purposeId}}-input"
 								   placeholder="{{'project.intervention_logic_purpose_ph'|translate}}"
 								   ng-model="purpose.description"
 								   required />
@@ -126,10 +129,11 @@
 					</div>
 
 					<div class="form-group" show-errors>
-						<label for="input-name" class="col-sm-2 control-label" translate="project.assumptions"></label>
+						<label for="purpose-assum-{{purposeId}}-input" class="col-sm-2 control-label" translate="project.assumptions"></label>
 						<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="purpose.assumptions">
 							<textarea class="form-control"
 									  name="assumptions"
+									  id="purpose-assum-{{purposeId}}-input"
 									  placeholder="{{'project.assumptions_purpose_ph'|translate}}"
 									  ng-model="purpose.assumptions"
 									  required></textarea>
@@ -139,16 +143,17 @@
 					</div>
 
 					<div class="form-group">
-						<label for="input-name" class="col-sm-2 control-label" translate="shared.indicators"></label>
+						<label class="col-sm-2 control-label" translate="shared.indicators"></label>
 						<div class="col-sm-10">
 							<ul class="form-control-static">
 								<li ng-repeat="indicatorId in purpose.indicators">
 									{{indicatorsById[indicatorId].name}}
-									<span acl-has-project-role="owner">(<a ng-click="editIndicator(indicatorId, 'root.' + purposeId)" translate="shared.edit"></a>)</span>
-									<span acl-lacks-project-role="owner">(<a ng-click="editIndicator(indicatorId, 'root.' + purposeId)" translate="shared.display"></a>)</span>
+									<span acl-has-project-role="owner">(<a ng-click="editIndicator(indicatorId, purpose.indicators)" translate="shared.edit"></a> |
+										<a ng-click="detachIndicator(indicatorId, purpose.indicators)" translate="shared.detach"></a>)</span>
+									<span acl-lacks-project-role="owner">(<a ng-click="editIndicator(indicatorId, purpose.indicators)" translate="shared.display"></a>)</span>
 								</li>
 								<li acl-has-project-role="owner">
-									<a ng-click="editIndicator('new', 'root.' + purposeId)" translate="project.add_indicator"></a>
+									<a ng-click="editIndicator('new', purpose.indicators)" translate="project.add_indicator"></a>
 								</li>
 							</ul>
 						</div>
@@ -170,10 +175,11 @@
 						<div class="panel-body" ng-show="tabOpen">
 							<ng-form name="outputForm">
 								<div class="form-group" show-errors>
-									<label for="input-name" class="col-sm-2 control-label" translate="shared.description"></label>
+									<label for="output-desc-{{purposeId}}-{{outputId}}-input" class="col-sm-2 control-label" translate="shared.description"></label>
 									<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="output.description">
 										<textarea class="form-control"
 												  required
+												  id="output-desc-{{purposeId}}-{{outputId}}-input"
 												  name="description"
 												  placeholder="{{'project.output_desc_ph'|translate}}"
 												  ng-model="output.description"></textarea>
@@ -183,10 +189,11 @@
 								</div>
 
 								<div class="form-group" show-errors>
-									<label for="input-name" class="col-sm-2 control-label" translate="project.assumptions"></label>
+									<label for="output-assump-{{purposeId}}-{{outputId}}-input" class="col-sm-2 control-label" translate="project.assumptions"></label>
 									<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="output.assumptions">
 										<textarea class="form-control"
 												  required
+												  id="output-assump-{{purposeId}}-{{outputId}}-input"
 												  name="assumptions"
 												  placeholder="{{'project.output_assumptions_ph'|translate}}"
 												  ng-model="output.assumptions"></textarea>
@@ -196,16 +203,18 @@
 								</div>
 
 								<div class="form-group">
-									<label for="input-name" class="col-sm-2 control-label" translate="shared.indicators"></label>
+									<label class="col-sm-2 control-label" translate="shared.indicators"></label>
 									<div class="col-sm-10">
 										<ul class="form-control-static">
 											<li ng-repeat="indicatorId in output.indicators">
 												{{indicatorsById[indicatorId].name}}
-												<span acl-has-project-role="owner">(<a ng-click="editIndicator(indicatorId, 'root.' + purposeId + '.' + outputId)" translate="shared.edit"></a>)</span>
-												<span acl-lacks-project-role="owner">(<a ng-click="editIndicator(indicatorId, 'root.' + purposeId + '.' + outputId)" translate="shared.display"></a>)</span>
+												<span acl-has-project-role="owner">(<a ng-click="editIndicator(indicatorId, output.indicators)" translate="shared.edit"></a> |
+													<a ng-click="detachIndicator(indicatorId, output.indicators)" translate="shared.detach"></a>)</span>
+
+												<span acl-lacks-project-role="owner">(<a ng-click="editIndicator(indicatorId, output.indicators)" translate="shared.display"></a>)</span>
 											</li>
 											<li acl-has-project-role="owner">
-												<a ng-click="editIndicator('new', 'root.' + purposeId + '.' + outputId)" translate="project.add_indicator"></a>
+												<a ng-click="editIndicator('new', output.indicators)" translate="project.add_indicator"></a>
 											</li>
 										</ul>
 									</div>
@@ -226,18 +235,36 @@
 									<div class="panel-body" ng-show="tabOpen">
 										<ng-form name="activityForm">
 											<div class="form-group" show-errors>
-												<label for="input-name" class="col-sm-2 control-label" translate="shared.description"></label>
+												<label for="activity-desc-{{purposeId}}-{{outputId}}-{{activityId}}-input"
+													   class="col-sm-2 control-label"
+													   translate="shared.description"></label>
+
 												<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="activity.description">
-													<input type="text" class="form-control" name="description" placeholder="{{'project.activity_desc_ph'|translate}}" ng-model="activity.description" required/>
+													<input type="text"
+														   id="activity-desc-{{purposeId}}-{{outputId}}-{{activityId}}-input"
+														   class="form-control"
+														   name="description"
+														   placeholder="{{'project.activity_desc_ph'|translate}}"
+														   ng-model="activity.description"
+														   required/>
 
 													<p class="help-block" ng-if="activityForm.description.$error.required" translate="form.mandatory"></p>
 												</div>
 											</div>
 
 											<div class="form-group" show-errors>
-												<label for="input-name" class="col-sm-2 control-label" translate="project.prerequisite"></label>
+												<label for="activity-prereq-{{purposeId}}-{{outputId}}-{{activityId}}-input"
+													   class="col-sm-2 control-label"
+													   translate="project.prerequisite"></label>
+
 												<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="activity.prerequesites">
-													<input type="text" class="form-control" placeholder="{{'project.activity_prereq_ph'|translate}}" ng-model="activity.prerequesites" name="prerequesites" required/>
+													<input type="text"
+														   id="activity-prereq-{{purposeId}}-{{outputId}}-{{activityId}}-input"
+														   class="form-control"
+														   placeholder="{{'project.activity_prereq_ph'|translate}}"
+														   ng-model="activity.prerequesites"
+														   name="prerequesites"
+														   required/>
 
 													<p class="help-block" ng-if="activityForm.prerequesites.$error.required" translate="form.mandatory"></p>
 												</div>
@@ -266,6 +293,23 @@
 			<i class="fa fa-plus"></i>
 			<span translate="project.add_purpose"></span>
 		</button>
+	</fieldset>
+	<br/>
+
+	<fieldset>
+		<legend>Indicateurs supplémentaires</legend>
+
+		<ul class="form-control-static">
+			<li ng-repeat="indicatorId in otherIndicators">
+				{{indicatorsById[indicatorId].name}}
+				<span acl-has-project-role="owner">(<a ng-click="editIndicator(indicatorId, null)" translate="shared.edit"></a>)</span>
+				<span acl-lacks-project-role="owner">(<a ng-click="editIndicator(indicatorId, null)" translate="shared.display"></a>)</span>
+			</li>
+			<li acl-has-project-role="owner">
+				<a ng-click="editIndicator('new', null)" translate="project.add_indicator"></a>
+			</li>
+		</ul>
+
 	</fieldset>
 	
 	<div acl-has-project-role="owner">
